--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+        *{box-sizing:border-box}
+
         :root {
             --mc-dark: #1a1a1a;
             --mc-green: #55FF55;
