--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
             color: #FFD700;
             text-shadow: 3px 3px 0 #555;
             margin: 20px 0;
+            font-size: 1.8em;
         }
 
         .controls {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            grid-template-columns: repeat(2, minmax(150px, 1fr));
             gap: 15px;
             margin-bottom: 30px;
             width: 100%;
@@ -56,7 +57,7 @@
             color: var(--mc-green);
             padding: 10px 8px;
             font-family: inherit;
-            font-size: 0.7em;
+            font-size: 0.65em;
             transition: all 0.2s;
             text-shadow: 1px 1px 0 #000;
             box-sizing: border-box;
@@ -132,7 +133,8 @@
         .online { background: #55FF55; box-shadow: 0 0 10px #55FF55; }
         .offline { background: #FF5555; }
 
-        @media (max-width: 768px) {
+        /* Адаптивность */
+        @media (max-width: 600px) {
             .container {
                 padding: 15px;
                 width: 100%;
@@ -144,8 +146,23 @@
             }
 
             h1 {
-                font-size: 1.5em;
+                font-size: 1.3em;
                 margin: 10px 0;
+            }
+
+            button, input {
+                font-size: 0.6em;
+                padding: 8px 6px;
+            }
+        }
+
+        @media (min-width: 601px) and (max-width: 900px) {
+            .controls {
+                grid-template-columns: repeat(2, minmax(120px, 1fr));
+            }
+            
+            button, input {
+                font-size: 0.6em;
             }
         }
     </style>
@@ -155,14 +172,14 @@
         <h1>⚡ Minecraft Bot Controller</h1>
         
         <div class="controls">
-            <input type="text" id="host" placeholder="Сервер IP" value="quinitylite.aternos.me">
+            <input type="text" id="host" placeholder="Сервер IP" value="quinitylite.aternos.me" style="grid-column: 1 / 3;">
             <input type="number" id="port" placeholder="Порт" value="15950">
             <input type="text" id="username" placeholder="Ник бота" value="QuinityBot">
             <button id="startBtn">
                 <span class="status-indicator offline"></span>
-                Запустить бота
+                Запуск
             </button>
-            <button id="stopBtn">⏹️ Экстренная остановка</button>
+            <button id="stopBtn">⏹️ Стоп</button>
         </div>
 
         <div id="console">
